Migrate AuditConfigMigrater and Hasher CLIs to picocli